--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: row;
     height: 100vh;
-    overflow: hidden;
+    width: 100vw;
     font-family: "Aptos", Arial, Helvetica, sans-serif;
 }
 
@@ -70,7 +70,7 @@ img {
 .right-side {
     background-color: rgb(244, 246, 247);
     display: flex;
-    flex-direction: column;
+    flex-flow: column nowrap;
     justify-content: center;
 }
 
@@ -82,5 +82,23 @@ img {
 }
 
 .sign-up-container {
+    display: flex;
+    flex-direction: column;
     background-color: white;
+    padding-left: var(--right-side-padding-left);
+    margin-bottom: 32px;
+    padding-bottom: 32px;
+}
+
+form {
+    display: flex;
+    flex-flow: row wrap;
+    width: 75%;
+    gap: 32px;
+}
+
+form > div {
+    display: flex;
+    flex-flow: column wrap;
+    width: 250px;
 }
