--- a/style.css
+++ b/style.css
@@ -128,3 +128,16 @@ form input[type="password"]:invalid {
 form input:focus {
     box-shadow: 1.4px 2.7px 2.7px hsl(0deg 0% 0% / 0.46);
 }
+
+
+button {
+    color: white;
+    font-family: inherit;
+    font-size: 16px;
+    margin-left: var(--right-side-padding-left);
+    background-color: rgb(99, 91, 76);
+    border: none;
+    padding: 8px 32px;
+    border-radius: 8px;
+    box-shadow: 1.4px 2.7px 2.7px hsl(0deg 0% 0% / 0.46)
+}
