--- a/style.css
+++ b/style.css
@@ -16,11 +16,15 @@
 body {
     margin: 0px;
     padding: 0px;
-    display: flex;
-    flex-direction: row;
+
     height: 100vh;
     width: 100vw;
     font-family: "Aptos", Arial, Helvetica, sans-serif;
+}
+
+.main {
+    display: flex;
+    flex-direction: row;
 }
 
 .left-side {
@@ -88,6 +92,7 @@ img {
     padding-left: var(--right-side-padding-left);
     margin-bottom: 32px;
     padding-bottom: 32px;
+    box-shadow: 0px 4px 16px 0px rgba(0,0,0,0.22);
 }
 
 .sign-up-container > p {
@@ -142,6 +147,10 @@ button {
     box-shadow: 1.4px 2.7px 2.7px hsl(0deg 0% 0% / 0.46)
 }
 
+button:hover {
+    background-color: rgb(74, 68, 57);
+}
+
 p.log-in {
     font-size: initial;
     font-weight: initial;
@@ -151,4 +160,5 @@ p.log-in {
 p > a {
     color: rgb(99, 91, 76);
     font-weight: 600;
+    text-decoration: none;
 }
